--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <ul class="nav-li">
             <li>Home</li>
             <li>About Us</li>
-            <li>Pages</li>
+            <li>Pages <i class="fa-solid fa-angle-down"></i></li>
             <li>Services</li>
             <li>Blog</li>
             <li>Contact Us</li>
@@ -76,7 +76,7 @@
                 </p>
                 <h6 class="box-h6">Testimonials</h6>
                 <div class="icons-wraper">
-                  <div class="icon">
+                  <div class="icon1">
                     <img src="images/Vector.png" alt="" />
                   </div>
                 </div>
