--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h6 class="box-h6">Testimonials</h6>
                 <div class="icons-wraper">
                   <div class="icon1">
-                    <img src="images/Icon sadsad.svg" alt="vector">
+                    <img src="images/Vector.png" alt="vector">
                   </div>
                 </div>
               </div>
